{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 91,
  "lineage": "1173d7a3-a947-100e-3e2b-1eee84b3986f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "api_server_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0224c14aa688e2459",
            "association_id": "eipassoc-0b25fbba5fb5a5837",
            "domain": "vpc",
            "id": "eipalloc-0224c14aa688e2459",
            "instance": "i-0ee5d007f27beb08f",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0cd30fbd0c3f173db",
            "private_dns": "ip-10-0-0-31.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.31",
            "public_dns": "ec2-43-200-195-208.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.200.195.208",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "the_pool_api_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e4a9ad2eb120e054",
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:instance/i-0ee5d007f27beb08f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ee5d007f27beb08f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "the_pool_admin_key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cd30fbd0c3f173db",
            "private_dns": "ip-10-0-0-31.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.31",
            "public_ip": "43.200.195.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c9d496b9ddf38f8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a9e1848f6428f28c",
            "tags": {
              "Name": "the pool api server"
            },
            "tags_all": {
              "Name": "the pool api server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08e959d5c04e7bf79"
            ]
          },
          "dependencies": [
            "aws_key_pair.the_pool_admin_key_pair",
            "aws_security_group.api_server_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:internet-gateway/igw-014fae478513bcfd4",
            "id": "igw-014fae478513bcfd4",
            "owner_id": "347292863614",
            "tags": {
              "Name": "the-pool-igw"
            },
            "tags_all": {
              "Name": "the-pool-igw"
            },
            "vpc_id": "vpc-0ec103699d2111894"
          },
          "dependencies": [
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:route-table/rtb-006523512d521defe",
            "id": "rtb-006523512d521defe",
            "owner_id": "347292863614",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00d8307e30c128aa5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "the-pool-private-subnet-1-route"
            },
            "tags_all": {
              "Name": "the-pool-private-subnet-1-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec103699d2111894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_1_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:route-table/rtb-07934ff9f75c693d3",
            "id": "rtb-07934ff9f75c693d3",
            "owner_id": "347292863614",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014fae478513bcfd4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "the-pool-public-subnet-1-route"
            },
            "tags_all": {
              "Name": "the-pool-public-subnet-1-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec103699d2111894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fd264b17e60b437",
            "route_table_id": "rtb-006523512d521defe",
            "subnet_id": "subnet-081d63676d2b57052"
          },
          "dependencies": [
            "aws_route_table.private_subnet_1_route",
            "aws_subnet.private_subnet_1",
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a17b642588dc97c",
            "route_table_id": "rtb-07934ff9f75c693d3",
            "subnet_id": "subnet-0a9e1848f6428f28c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_subnet_1_route",
            "aws_subnet.public_subnet_1",
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:security-group/sg-08e959d5c04e7bf79",
            "description": "api server security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e959d5c04e7bf79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "api server security group",
            "name_prefix": "",
            "owner_id": "347292863614",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "api server security group"
            },
            "tags_all": {
              "Name": "api server security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec103699d2111894"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:subnet/subnet-081d63676d2b57052",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d63676d2b57052",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347292863614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-pool-private-subnet"
            },
            "tags_all": {
              "Name": "the-pool-private-subnet"
            },
            "vpc_id": "vpc-0ec103699d2111894"
          },
          "dependencies": [
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:subnet/subnet-0a9e1848f6428f28c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a9e1848f6428f28c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "347292863614",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-pool-public-subnet"
            },
            "tags_all": {
              "Name": "the-pool-public-subnet"
            },
            "vpc_id": "vpc-0ec103699d2111894"
          },
          "dependencies": [
            "aws_vpc.the_pool_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "the_pool_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:347292863614:vpc/vpc-0ec103699d2111894",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003f8bd408c4cea02",
            "default_route_table_id": "rtb-0842607bdd22b101b",
            "default_security_group_id": "sg-0601e53e41b224bf2",
            "dhcp_options_id": "dopt-0a51bb76da65372bc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0ec103699d2111894",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0842607bdd22b101b",
            "owner_id": "347292863614",
            "tags": {
              "Name": "the-pool-vpc"
            },
            "tags_all": {
              "Name": "the-pool-vpc"
            }
          }
        }
      ]
    }
  ]
}